@@ -8,8 +8,8 @@ import ar.edu.utn.dds.k3003.facades.FachadaViandas;
 import ar.edu.utn.dds.k3003.facades.dtos.*;
 import ar.edu.utn.dds.k3003.tests.TestTP;
 import java.time.LocalDateTime;
+import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.SneakyThrows;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -89,12 +89,12 @@ public class HeladerasTest implements TestTP<FachadaHeladeras> {
     List<TemperaturaDTO> temperaturaDTOS = instancia.obtenerTemperaturas(14);
     assertEquals(
         2,
-        temperaturaDTOS,
+        temperaturaDTOS.size(),
         "Las temperaturas de una heladera no se guardan/recuperan correctamente");
     List<TemperaturaDTO> sortedTemperatures =
         temperaturaDTOS.stream()
-            .sorted((f1, f2) -> f2.getFechaMedicion().compareTo(f2.getFechaMedicion()))
-            .collect(Collectors.toList());
+            .sorted(Comparator.comparing(TemperaturaDTO::getFechaMedicion))
+            .toList();
     assertEquals(
         16,
         sortedTemperatures.get(0).getTemperatura(),
